--- a/hello-world.html
+++ b/hello-world.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hello, world!</h1>
+    <p>Welcome to my first website! I am about to embark on the exciting j
+        ourney of learning how to code. Won't you join me?</p>
 </body>
 </html>
